--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upload</title>
-    <link rel="stylesheet" href="../styles/materialize.min.css">
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="./styles/materialize.min.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
     <div class="container">
         <div class="row">
             <div class="parent">
-                <img class="logo responsive-img" src="../images/gdg_logo.png"/>
+                <img class="logo responsive-img" src="./images/gdg_logo.png"/>
             </div>
             <form method="POST" enctype="multipart/form-data" id="formData">
                 <div class="row">
@@ -39,8 +39,8 @@
             </form>
         </div>
     </div>
-    <script src="../js/jquery-3.2.1.min.js"></script>
-    <script src="../js/materialize.min.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="./js/jquery-3.2.1.min.js"></script>
+    <script src="./js/materialize.min.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
