--- a/searchMember.html
+++ b/searchMember.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Search Member</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/materialize.min.css">
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="./styles/materialize.min.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
 <div id="searchMemberContainer">
@@ -37,8 +37,8 @@
     </div>
 </div>
 
-<script src="../js/jquery-3.2.1.min.js"></script>
-<script src="../js/materialize.min.js"></script>
-<script src="../js/script.js"></script>
+<script src="./js/jquery-3.2.1.min.js"></script>
+<script src="./js/materialize.min.js"></script>
+<script src="./js/script.js"></script>
 </body>
 </html>
